--- a/battle.html
+++ b/battle.html
@@ -16,6 +16,7 @@
                     <div class="health" id="player1-health"></div>
                 </div>
             </div>
+            <div class="moves"></div>
         </div>
         <div class="player">
             <h2>Player 2</h2>
@@ -25,6 +26,7 @@
                     <div class="health" id="player2-health"></div>
                 </div>
             </div>
+            <div class="moves"></div>
         </div>
     </div>
     <!-- <button id="attack-btn">Attack!</button> -->
