--- a/battle.html
+++ b/battle.html
@@ -1,44 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pokémon Battleground</title>
     <link rel="stylesheet" href="battle.css" />
- </head>
- <body>
-    <div class="battleground">
-      <div class="player">
-        <h2>Player 1</h2>
-        <div class="pokemon" id="poke1">
-          <img src="" alt="Pokémon 1" />
-          <div class="health-bar">
-            <div class="health" id="player1-health"></div>
+  </head>
+  <body>
+    <div class="game-container">
+      <div class="battleground">
+        <div class="player">
+          <h2>Player 1</h2>
+          <div class="pokemon" id="poke1">
+            <img src="" alt="Pokémon 1" />
+            <div class="health-bar">
+              <div class="health" id="player1-health"></div>
+            </div>
+            <div class="moves">
+              <button class="move-button" id="m1">Move 1</button>
+              <button class="move-button" id="m2">Move 2</button>
+              <button class="move-button" id="m3">Move 3</button>
+              <button class="move-button" id="m4">Move 4</button>
+            </div>
           </div>
-          <div class="moves">
-            <button class="move-button" id="m1">Move 1</button>
-            <button class="move-button" id="m2">Move 2</button>
-            <button class="move-button" id="m3">Move 3</button>
-            <button class="move-button" id="m4">Move 4</button>
+        </div>
+        <div class="player">
+          <h2>Player 2</h2>
+          <div class="pokemon" id="poke2">
+            <img src="" alt="Pokémon 2" />
+            <div class="health-bar">
+              <div class="health" id="player2-health"></div>
+            </div>
+            <div class="moves">
+              <button class="move-button" id="m1">Move 1</button>
+              <button class="move-button" id="m2">Move 2</button>
+              <button class="move-button" id="m3">Move 3</button>
+              <button class="move-button" id="m4">Move 4</button>
+            </div>
           </div>
         </div>
       </div>
-      <div class="player">
-        <h2>Player 2</h2>
-        <div class="pokemon" id="poke2">
-          <img src="" alt="Pokémon 2" />
-          <div class="health-bar">
-            <div class="health" id="player2-health"></div>
-          </div>
-          <div class="moves">
-            <button class="move-button" id="m1">Move 1</button>
-            <button class="move-button" id="m2">Move 2</button>
-            <button class="move-button" id="m3">Move 3</button>
-            <button class="move-button" id="m4">Move 4</button>
-          </div>
+      <div class="comment-box">
+        <div class="comment" id="comment">
+            <p>Start game!</p>
         </div>
       </div>
     </div>
     <script src="battle.js"></script>
- </body>
+  </body>
 </html>
