adds some game functionality

--- a/battle.html
+++ b/battle.html
@@ -13,7 +13,7 @@
           <h2>Player 1</h2>
           <div class="pokemon" id="poke1">
             <img src="" alt="Pokémon 1" />
-            <div class="health-bar">
+            <div class="health-bar" id="hp">
               <div class="health" id="player1-health"></div>
             </div>
             <div class="moves">
@@ -28,7 +28,7 @@
           <h2>Player 2</h2>
           <div class="pokemon" id="poke2">
             <img src="" alt="Pokémon 2" />
-            <div class="health-bar">
+            <div class="health-bar" id="hp">
               <div class="health" id="player2-health"></div>
             </div>
             <div class="moves">
