--- a/battle.html
+++ b/battle.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="battle.css" />
   </head>
   <body>
+    <div class="loader" id="loadingScreen"></div>
     <div class="game-container">
       <div class="battleground">
         <div class="player">
