adds instructions page

--- a/battle.html
+++ b/battle.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pokémon Battleground</title>
     <link rel="stylesheet" href="battle.css" />
+    <link rel="icon" href="./assets/pokeball.png" type="image/x-icon">
   </head>
   <body>
     <div class="loader" id="loadingScreen"></div>
