adds whose turn to play

--- a/battle.html
+++ b/battle.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div class="loader" id="loadingScreen"></div>
+    <div class="turn" id="whoseturn"></div>
     <div class="game-container">
       <div class="battleground">
         <div class="player">
