--- a/battle.html
+++ b/battle.html
@@ -9,7 +9,9 @@
   </head>
   <body>
     <div class="loader" id="loadingScreen"></div>
-    <div class="turn" id="whoseturn"></div>
+    <div class="turn" id="whoseturn">
+      <p>Play a move!</p>
+    </div>
     <div class="game-container">
       <div class="battleground">
         <div class="player">
