--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="icon" href="./assets/pokeball.png" type="image/x-icon">
 </head>
 <body>
+    <div id="mobileMessage">
+        Please open this website on a laptop.
+    </div>
     <div class="container">
         <h1>Pokémon Game Instructions</h1>
         <section>
@@ -25,5 +28,14 @@
         </section>
         <button class="next-button" onclick="location.href='search.html'">Next</button>
     </div>
+    <script>
+        function isMobileDevice() {
+            return (typeof window.orientation !== "undefined") || (navigator.userAgent.indexOf('IEMobile') !== -1);
+        }
+
+        if (isMobileDevice()) {
+            document.getElementById('mobileMessage').style.display = 'block';
+        }
+    </script>
 </body>
 </html>
