--- a/search.html
+++ b/search.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PokeBattle</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <link rel="icon" href="./assets/pokeball.png" type="image/x-icon">
 </head>
 <body>
     <div class="player"></div>
-    <script src="main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
