--- a/battle.html
+++ b/battle.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pokémon Battleground</title>
-    <link rel="stylesheet" href="battle.css" />
+    <link rel="stylesheet" href="./styles/battle.css" />
     <link rel="icon" href="./assets/pokeball.png" type="image/x-icon">
   </head>
   <body>
@@ -51,6 +51,6 @@
         </div>
       </div>
     </div>
-    <script src="battle.js"></script>
+    <script src="./js/battle.js"></script>
   </body>
 </html>
