--- a/detail.html
+++ b/detail.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pokemon Detail</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <link rel="icon" href="./assets/pokeball.png" type="image/x-icon">
-    <script src="./pokemon-detail.js" defer></script>
+    <script src="./js/pokemon-detail.js" defer></script>
   </head>
   <body>
     <main class="detail-main main">
