--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokémon Game Instructions</title>
-    <link rel="stylesheet" href="instructions.css">
+    <link rel="stylesheet" href="./styles/instructions.css">
     <link rel="icon" href="./assets/pokeball.png" type="image/x-icon">
 </head>
 <body>
